--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="item"><img src="assets/images/carousel5.jpg"></div>
             </div>
             <div class="introduction">
-                <h1 class="title text-italian text-center font-family-$type2">Best Hotel In Pollachi</h1>
+                <h1 class="title text-italian text-center">Best Hotel In Pollachi</h1>
                 <h4 class="description text-center">Nestled in the heart of Pollachi, Madhava Inn offers spacious suites, plush furnishings and modern amenities, making it the perfect destination for business and leisure travellers.</h4>
             </div>
         </div>
@@ -79,7 +79,13 @@
                 <div class="room-types">
                     <div class="row item">
                         <div class="col-12 col-md-6">
-                            <img src="assets/images/roomtype1.jpg" class="img-fluid">
+                            <div id="room-suite" class="owl-carousel owl-theme full-width">
+                                <img src="assets/images/roomtype1.jpg" class="img-fluid">
+                                <div class="item"><img src="assets/images/carousel2.jpg"></div>
+                                <div class="item"><img src="assets/images/carousel3.jpg"></div>
+                                <div class="item"><img src="assets/images/carousel4.jpg"></div>
+                                <div class="item"><img src="assets/images/carousel5.jpg"></div>
+                            </div>
                         </div>
                         <div class="col-12 col-md-6 room-description">
                             <h4>A/C Suite</h4>
@@ -104,7 +110,13 @@
                     </div>
                     <div class="row item">
                         <div class="col-12 col-md-6">
-                            <img src="assets/images/roomtype3.jpg" class="img-fluid">
+                            <div id="room-executive" class="owl-carousel owl-theme full-width">
+                                <img src="assets/images/roomtype3.jpg" class="img-fluid">
+                                <div class="item"><img src="assets/images/carousel2.jpg"></div>
+                                <div class="item"><img src="assets/images/carousel3.jpg"></div>
+                                <div class="item"><img src="assets/images/carousel4.jpg"></div>
+                                <div class="item"><img src="assets/images/carousel5.jpg"></div>
+                            </div>
                         </div>
                         <div class="col-12 col-md-6 room-description">
                             <h4>A/C Executive</h4>
@@ -129,7 +141,13 @@
                     </div>
                     <div class="row item">
                         <div class="col-12 col-md-6">
-                            <img src="assets/images/roomtype2.jpg" class="img-fluid">
+                            <div id="room-deluxe" class="owl-carousel owl-theme full-width">
+                                <img src="assets/images/roomtype2.jpg" class="img-fluid">
+                                <div class="item"><img src="assets/images/carousel2.jpg"></div>
+                                <div class="item"><img src="assets/images/carousel3.jpg"></div>
+                                <div class="item"><img src="assets/images/carousel4.jpg"></div>
+                                <div class="item"><img src="assets/images/carousel5.jpg"></div>
+                            </div>
                         </div>
                         <div class="col-12 col-md-6 room-description">
                             <h4>A/C Deluxe</h4>
@@ -338,127 +356,125 @@
                     <h2>ABOUT US</h2>
                 </div>
             </div> 
-            <div class="row cover-details">
-                <div class="col-9 text-center mx-auto">
+            <div class="text-center about-desc">
                     <h4>Founded in 2018, Hotel Madhava Inn aspires to satisfy our guests by guaranteeing
                         warmest hospitality and outstanding facilities. We provide everything to make your
                         business trips and holiday stay memorable. Located in the heart of the city, Madhava
                         Inn is considered as one of the best places to stay since the hospitals, shopping areas
                         and travel facilities are within easy reach.</h4>
-                </div>
             </div>
         </div>
-        <!-- Modal for Contact - us Button -->
+        <!-- Modal for Book-now button-->
         <div class="modal booking-modal fade" id="bookingModal" tabindex="-1" role="dialog" aria-labelledby="bookingModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
+                <div class="modal-content">
+                    <div class="modal-header">
 
-                    <h4 class="modal-title" id="exampleModalLabel">Book a room</h4>
-                </div>
-                <form role="form" method="post" id="booknowform" name="contact-form" data-toggle="validator">
-                <div class="modal-body">
-                    <p>If your dates are at all flexible, please let us know. We book up quickly, especially on summer weekends, but would love to find a way to host you.</p>
-                           <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group row">
-                                <label class="col-sm-4 col-form-label">First Name</label>
-                                <div class="col-sm-8">
-                                    <input type="text" placeholder="First Name" class="form-control" id="firstName" />
-                                </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group row">
-                                <label class="col-sm-4 col-form-label">Last Name</label>
-                                <div class="col-sm-8">
-                                    <input type="text" placeholder="Last Name" class="form-control" id="lastName" />
-                                </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group row">
-                                <label class="col-sm-4 col-form-label">Email</label>
-                                <div class="col-sm-8">
-                                    <input type="text" placeholder="Email" class="form-control" id="email"/>
-                                </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group row">
-                                <label class="col-sm-4 col-form-label">Phone</label>
-                                <div class="col-sm-8">
-                                    <input type="text" placeholder="Phone" class="form-control" id="phone"/>
-                                </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group row">
-                                <label class="col-sm-4 col-form-label">Date of arrival</label>
-                                <div class="col-sm-8">
-                                    <div id="datepicker-arrival" class="input-group date datepicker">
-                                        <input type="text" class="form-control" id="DOA">
-                                        <span class="input-group-addon input-group-append border-left">
-                                          <span class="mdi mdi-calendar input-group-text"></span>
-                                        </span>
+                        <h4 class="modal-title" id="exampleModalLabel">Book a room</h4>
+                    </div>
+                    <form role="form" method="post" id="booknowform" name="contact-form" data-toggle="validator">
+                    <div class="modal-body">
+                        <p>If your dates are at all flexible, please let us know. We book up quickly, especially on summer weekends, but would love to find a way to host you.</p>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group row">
+                                        <label class="col-sm-4 col-form-label">First Name</label>
+                                        <div class="col-sm-8">
+                                            <input type="text" placeholder="First Name" class="form-control" id="firstName" />
+                                        </div>
                                     </div>
                                 </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group row">
-                                <label class="col-sm-4 col-form-label">Date of departure</label>
-                                <div class="col-sm-8">
-                                    <div id="datepicker-departure" class="input-group date datepicker">
-                                        <input type="text" class="form-control" id="DOD">
-                                        <span class="input-group-addon input-group-append border-left">
-                                          <span class="mdi mdi-calendar input-group-text"></span>
-                                        </span>
+                                <div class="col-md-6">
+                                    <div class="form-group row">
+                                        <label class="col-sm-4 col-form-label">Last Name</label>
+                                        <div class="col-sm-8">
+                                            <input type="text" placeholder="Last Name" class="form-control" id="lastName" />
+                                        </div>
                                     </div>
                                 </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group row">
+                                        <label class="col-sm-4 col-form-label">Email</label>
+                                        <div class="col-sm-8">
+                                            <input type="text" placeholder="Email" class="form-control" id="email"/>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group row">
+                                        <label class="col-sm-4 col-form-label">Phone</label>
+                                        <div class="col-sm-8">
+                                            <input type="text" placeholder="Phone" class="form-control" id="phone"/>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group row">
-                                <label class="col-sm-4 col-form-label">No of Adults</label>
-                                <div class="col-sm-8">
-                                    <select class="form-control" id="noOfAdults">
-                                    <option>1</option>
-                                    <option>2</option>
-                                    <option>3</option>
-                                    <option>4</option>
-                                    </select>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group row">
+                                        <label class="col-sm-4 col-form-label">Date of arrival</label>
+                                        <div class="col-sm-8">
+                                            <div id="datepicker-arrival" class="input-group date datepicker">
+                                                <input type="text" class="form-control" id="DOA">
+                                                <span class="input-group-addon input-group-append border-left">
+                                                <span class="mdi mdi-calendar input-group-text"></span>
+                                                </span>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
+                                <div class="col-md-6">
+                                    <div class="form-group row">
+                                        <label class="col-sm-4 col-form-label">Date of departure</label>
+                                        <div class="col-sm-8">
+                                            <div id="datepicker-departure" class="input-group date datepicker">
+                                                <input type="text" class="form-control" id="DOD">
+                                                <span class="input-group-addon input-group-append border-left">
+                                                <span class="mdi mdi-calendar input-group-text"></span>
+                                                </span>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="col-md-6">
-                                <div class="form-group row">
-                                <label class="col-sm-4 col-form-label">No of Kids</label>
-                                <div class="col-sm-8">
-                                    <select class="form-control" id="noOfKids">
-                                        <option>1</option>
-                                        <option>2</option>
-                                        <option>3</option>
-                                        <option>4</option>
-                                    </select>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group row">
+                                        <label class="col-sm-4 col-form-label">No of Adults</label>
+                                        <div class="col-sm-8">
+                                            <select class="form-control" id="noOfAdults">
+                                            <option>1</option>
+                                            <option>2</option>
+                                            <option>3</option>
+                                            <option>4</option>
+                                            </select>
+                                        </div>
+                                    </div>
                                 </div>
+                                <div class="col-md-6">
+                                    <div class="form-group row">
+                                        <label class="col-sm-4 col-form-label">No of Kids</label>
+                                        <div class="col-sm-8">
+                                            <select class="form-control" id="noOfKids">
+                                                <option>1</option>
+                                                <option>2</option>
+                                                <option>3</option>
+                                                <option>4</option>
+                                            </select>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    
+                        
+                    </div>
+                    <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-success book-a-room">Book</button>
+                    </div>
+                    </form>
                 </div>
-                <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-success book-a-room">Book</button>
-                </div>
-                </form>
-            </div>
             </div>
         </div>
         <footer>
