--- a/index.html
+++ b/index.html
@@ -58,11 +58,10 @@
         <div id="home-section" class="hotel-carousel">
             <div id="owl-demo" class="owl-carousel owl-theme full-width">
                 <div class="item"><img src="assets/images/carousel 1.jpg"></div>
+                <div class="item"><img src="assets/images/carousel 5.jpg"></div>
                 <div class="item"><img src="assets/images/carousel 2.jpg"></div>
                 <div class="item"><img src="assets/images/carousel 3.jpg"></div>
                 <div class="item"><img src="assets/images/carousel 4.jpg"></div>
-                <div class="item"><img src="assets/images/carousel 5.jpg"></div>
-                <div class="item"><img src="assets/images/carousel 6.jpg"></div>
             </div>
             <div class="introduction">
                 <h1 class="title text-italian text-center">Best Hotel In Pollachi</h1>
@@ -94,6 +93,8 @@
                                 <li><p>2 Guest</p></li>
                                 <li><p>1 Beds</p></li>
                             </ul>
+                            <p>Rate:Rs 3000 + GST / night</p>
+                            <p>Breakfast complimentary</p>
                             <div class="d-lg-flex justify-content-between align-items-center">
                                 <div class="d-flex">
                                     <span class="mdi mdi-snowflake"></span>
@@ -124,6 +125,8 @@
                                 <li><p>2 Guest</p></li>
                                 <li><p>1 Beds</p></li>
                             </ul>
+                            <p>Rate:Rs 2499 + GST / night</p>
+                            <p>Breakfast complimentary</p>
                             <div class="d-lg-flex justify-content-between align-items-center">
                                 <div class="d-flex">
                                     <span class="mdi mdi-snowflake"></span>
@@ -153,6 +156,8 @@
                                 <li><p>2 Guest</p></li>
                                 <li><p>2 Beds</p></li>
                             </ul>
+                            <p>Rate:Rs 2200 + GST / night</p>
+                            <p>Breakfast complimentary</p>
                             <div class="d-lg-flex justify-content-between align-items-center">
                                 <div class="d-flex">
                                     <span class="mdi mdi-snowflake"></span>
@@ -354,11 +359,12 @@
                 </div>
             </div> 
             <div class="text-center about-desc">
-                    <h4>Founded in 2018, Hotel Madhava Inn aspires to satisfy our guests by guaranteeing
+                    <div><iframe width="560" height="315" src="https://www.youtube.com/embed/CXLh3vBAblY" frameborder="10" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                        <div><h4>Founded in 2018, Hotel Madhava Inn aspires to satisfy our guests by guaranteeing
                         warmest hospitality and outstanding facilities. We provide everything to make your
                         business trips and holiday stay memorable. Located in the heart of the city, Madhava
                         Inn is considered as one of the best places to stay since the hospitals, shopping areas
-                        and travel facilities are within easy reach.</h4>
+                        and travel facilities are within easy reach.</h4></div>
             </div>
         </div>
         <!-- Modal for Book-now button-->
